# maw-mcp

./: PRD-maw-native.md  QUICKSTART.md  README.md  WORKFLOW_STATE.json  pyproject.toml
AGENT_PROMPTS/: 1_Testing_Infrastructure.md  2_Error_Handling.md  3_Code_Modularity.md  4_Type_Safety_Docs.md  COORDINATION.md  README.md
content/BY_TOOL/: macos-virtualization.md  makeblock-ai-camera.md  mbot2-cyberpi.md
content/phases/: README.md
content/templates/: AGENT_PROMPT.md  GOALS.md
src/: github.py  server.py  state.py
tests/: __init__.py  conftest.py
